add video histogram at the bottom

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 </head>
 
 <body>
+	
+    <svg id="videoSVG"></svg>
     <svg id="graphSVG">
 
     </svg>
 
     <div class="youtuber"></div>
-
-    <div class="videos"></div>
 </body>
 
 </html>
