added models and collections.  graph updates on scroll.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
 
     </svg>
 
+    <div class="videos">
+    	<div class="border">
+            <div class="date"></div>
+            <div class="content"></div>
+        </div>
+    </div>
     <div class="youtuber"></div>
 </body>
 
