--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <head>
     <meta property='og:image' content='images/screenshot.png'/>
+    <link href='http://fonts.googleapis.com/css?family=Quicksand:700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="stylesheets/bootstrap.css" type="text/css" />
     <link rel="stylesheet" href="stylesheets/style.css" type="text/css" />
 
@@ -10,19 +11,25 @@
 </head>
 
 <body>
-	
+
+    <svg id="graphSVG"></svg>
     <svg id="videoSVG"></svg>
-    <svg id="graphSVG">
 
-    </svg>
-
-    <div class="videos">
-    	<div class="border">
-            <div class="date"></div>
-            <div class="content"></div>
-        </div>
-    </div>
     <div class="youtuber"></div>
+
+    <!-- <div class="marker">
+        <div class="date"></div>
+        <div class="circle"></div>
+    </div> -->
+    <!-- <div class="videos">
+        <div class="border">
+            <div class="date"></div>
+            <div class="content">
+                <div class="youtuberContent"></div>
+                <div class="videoContent"></div>
+            </div>
+        </div>
+    </div> -->
 </body>
 
 </html>
