click on video and it highlights the corresponding nodes and lines

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <svg></svg>
 
-    <div class="youtuber"></div>
+    <div class="description"></div>
 
     <!-- <div class="marker">
         <div class="date"></div>
