delete code that's commented out, and format the video info a bit

--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
     <svg></svg>
 
     <div class="description"></div>
+    <div class="settings">
+        Sort by
+        <div class="btn-group">
+            <div class="btn sortTime">time</div>
+            <div class="btn sortViews">views</div>
+        </div>
+    </div>
 
     <!-- <div class="marker">
         <div class="date"></div>
