clean up to get ready for v5

--- a/index.html
+++ b/index.html
@@ -1,36 +1,19 @@
 <DOCTYPE! html>
 
 <head>
-    <meta property='og:image' content='images/screenshot.png'/>
-    <link href='http://fonts.googleapis.com/css?family=Quicksand:400,700' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="stylesheets/bootstrap.css" type="text/css" />
-    <link rel="stylesheet" href="stylesheets/style.css" type="text/css" />
-
-    <script data-main="scripts/main" src="scripts/contrib/require-jquery.js"></script>
+  <meta charset=utf-8 />
+  <meta property='og:image' content='images/screenshot.png'/>
+  <link href='http://fonts.googleapis.com/css?family=Quicksand:400,700' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="stylesheets/bootstrap.css" type="text/css" />
+  <link rel="stylesheet" href="stylesheets/style.css" type="text/css" />
 
 </head>
 
 <body>
 
-    <div class="timelineBG"></div>
-    <svg></svg>
+    <div id="main"></div>
 
-    <div class="settings">
-    </div>
-
-    <!-- <div class="marker">
-        <div class="date"></div>
-        <div class="circle"></div>
-    </div> -->
-    <!-- <div class="videos">
-        <div class="border">
-            <div class="date"></div>
-            <div class="content">
-                <div class="youtuberContent"></div>
-                <div class="videoContent"></div>
-            </div>
-        </div>
-    </div> -->
+    <script src="scripts/bundle.js"></script>
 </body>
 
 </html>
