turn Line.jsx -> Lines.jsx to handle drawing all the lines

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 </head>
 
 <body>
-
+    <svg>
+      <path class="distancePath"></path>
+    </svg>
     <div id="main"></div>
 
     <script src="scripts/bundle.js"></script>
