--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset=utf-8 />
   <meta property='og:image' content='images/screenshot.png'/>
-  <link href='http://fonts.googleapis.com/css?family=Quicksand:400,700' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Droid+Serif:700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="stylesheets/bootstrap.css" type="text/css" />
   <link rel="stylesheet" href="stylesheets/style.css" type="text/css" />
 
