--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link href='https://fonts.googleapis.com/css?family=Droid+Serif:700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="stylesheets/bootstrap.css" type="text/css" />
   <link rel="stylesheet" href="stylesheets/style.css" type="text/css" />
+  <script src="scripts/sound.js"></script>
 
 </head>
 
