add in annotations

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <svg>
+    <svg height="0">
       <path class="distancePath"></path>
     </svg>
     <div id="main"></div>
